--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6"
+    "bootstrap": "^4.0.0-alpha.6",
+    "bulma": "^0.4.2"
   }
 }
