--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
-    "bulma": "^0.4.2"
+    "bulma": "^0.4.2",
+    "vue-focus": "^2.1.0"
   }
 }
