--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
+    "babel-polyfill": "^6.23.0",
+    "boostrap": "^1.0.0",
+    "bootstrap-vue": "^0.16.1",
     "bulma": "^0.4.2",
     "vue-focus": "^2.1.0"
   }
