--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "boostrap": "^1.0.0",
     "bootstrap-vue": "^0.16.1",
     "bulma": "^0.4.2",
-    "vue-focus": "^2.1.0"
+    "vue-focus": "^2.1.0",
+    "vue-router": "^2.7.0"
   }
 }
