--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-vue": "^0.16.1",
     "bulma": "^0.4.2",
     "vue-focus": "^2.1.0",
+    "vue-i18n": "^7.0.3",
     "vue-router": "^2.7.0"
   }
 }
