--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "boostrap": "^1.0.0",
     "bootstrap-vue": "^0.16.1",
     "bulma": "^0.4.2",
+    "format-number": "^3.0.0",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.0.3",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-smoothscroll": "^0.1.1"
   }
 }
