--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "bootstrap-vue": "^0.16.1",
     "bulma": "^0.4.2",
     "format-number": "^3.0.0",
+    "jump.js": "^1.0.2",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.0.3",
-    "vue-router": "^2.7.0",
-    "vue-smoothscroll": "^0.1.1"
+    "vue-router": "^2.7.0"
   }
 }
