--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "cross-env": "^3.2.3",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "vue": "^2.4.2"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "boostrap": "^1.0.0",
     "bootstrap-vue": "^0.16.1",
-    "bulma": "^0.4.2",
+    "bulma": "^0.4.4",
     "format-number": "^3.0.0",
+    "jquery": "^3.2.1",
     "jump.js": "^1.0.2",
     "vue-focus": "^2.1.0",
-    "vue-i18n": "^7.0.3",
+    "vue-i18n": "^7.0.5",
     "vue-router": "^2.7.0"
   }
 }
