--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
   "/js/app.js": "/js/app.js",
   "/css/app.css": "/css/app.css",
   "/mix.js": "/mix.js",
-  "/css/admin.css": "/css/admin.css"
+  "/css/admin.css": "/css/admin.css",
+  "/js/admin.js": "/js/admin.js"
 }
