--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
-    "bootstrap-sass": "^3.3.7",
     "cross-env": "^3.2.3",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
     "vue": "^2.4.2"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "boostrap": "^1.0.0",
-    "bootstrap-vue": "^0.16.1",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.0.0-beta",
+    "bootstrap-vue": "^1.0.0-beta.5",
     "bulma": "^0.4.4",
     "format-number": "^3.0.0",
     "jquery": "^3.2.1",
     "jump.js": "^1.0.2",
     "vue-focus": "^2.1.0",
-    "vue-i18n": "^7.0.5",
+    "vue-i18n": "^7.2.0",
     "vue-router": "^2.7.0"
   }
 }
