--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "format-number": "^3.0.0",
     "jquery": "^3.2.1",
     "jump.js": "^1.0.2",
+    "moment": "^2.18.1",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.2.0",
     "vue-router": "^2.7.0"
