--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "simplesoftwareio/simple-qrcode": "^1.5",
+        "symfony/polyfill-iconv": "^1.5",
         "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
