--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://wildcard-participa.dev
+APP_URL=https://wildcard-participa.dev
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -34,3 +34,5 @@ PUSHER_APP_SECRET=
 
 MESSAGEBIRD_ACCESS_KEY=
 MESSAGEBIRD_ORIGINATOR=Participa
+
+SENTRY_DSN=
