--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "sentry/sentry-laravel": "^0.8.0",
         "simplesoftwareio/simple-qrcode": "^1.5",
         "symfony/polyfill-iconv": "^1.5",
         "tymon/jwt-auth": "0.5.*"
