--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel-notification-channels/messagebird": "^1.0",
-        "laravel/dusk": "^1.1",
-        "laravel/framework": "5.4.*",
+        "laravel/dusk": "^2.0",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "sentry/sentry-laravel": "^0.8.0",
         "simplesoftwareio/simple-qrcode": "^1.5",
@@ -17,9 +17,10 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.4",
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~6.0"
     },
     "autoload": {
         "classmap": [
