--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,6 @@ variables:
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
   paths:
-  - vendor/
   - node_modules/
 
 # This is a basic example for a gem or script which doesn't use
@@ -69,7 +68,7 @@ before_script:
   - php artisan migrate
 
   # Run database seed
-  # - php artisan db:seed
+  - php artisan db:seed
 
 test:
   script:
