--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,8 @@ variables:
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
+  key: "$CI_JOB_NAME-$CI_COMMIT_REF_NAME"
+  untracked: true
   paths:
   - vendor/
   - node_modules/
