--- a/.env.testing
+++ b/.env.testing
@@ -1,13 +1,18 @@
 APP_ENV=testing
 APP_DEBUG=true
-APP_KEY=key
+APP_KEY=base64:ZWfU+Gk9o4rPtR+Rt5mj9w+ofNw2mph2m7cXJYX66hE=
 
-DB_HOST=mysql
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=wildcard_participa_tests
 DB_USERNAME=root
-DB_PASSWORD=secret
+DB_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
 QUEUE_DRIVER=sync
 MAIL_DRIVER=log
+
+MESSAGEBIRD_ACCESS_KEY=HBp09uxqIFKaYcg7mOGzHe0Qr
+MESSAGEBIRD_ORIGINATOR=Participa
