--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "axios": "^0.15.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "0.*",
-    "lodash": "^4.17.4",
-    "vue": "^2.4.2"
+    "lodash": "^4.17.5",
+    "vue": "^2.5.16"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0-beta",
-    "bootstrap-vue": "^1.0.0-beta.5",
+    "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^1.5.1",
     "bulma": "^0.4.4",
     "format-number": "^3.0.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "jump.js": "^1.0.2",
-    "moment": "^2.18.1",
-    "raven-js": "^3.17.0",
+    "moment": "^2.21.0",
+    "raven-js": "^3.24.0",
     "vue-focus": "^2.1.0",
-    "vue-i18n": "^7.2.0",
-    "vue-router": "^2.7.0"
+    "vue-i18n": "^7.6.0",
+    "vue-router": "^2.8.1"
   }
 }
