--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "raven-js": "^3.17.0",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.2.0",
+    "vue-loader": "^14.2.2",
     "vue-router": "^2.7.0"
   }
 }
