--- a/package.json
+++ b/package.json
@@ -13,21 +13,24 @@
     "axios": "^0.15.3",
     "cross-env": "^3.2.3",
     "laravel-mix": "0.*",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "vue": "^2.5.16"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^4.1.0",
     "bootstrap-vue": "^1.5.1",
     "bulma": "^0.4.4",
     "format-number": "^3.0.0",
+    "hoek": "^5.0.3",
     "jquery": "^3.3.1",
     "jump.js": "^1.0.2",
-    "moment": "^2.21.0",
-    "raven-js": "^3.24.0",
+    "moment": "^2.22.1",
+    "node-sass": "^4.9.0",
+    "raven-js": "^3.24.2",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.6.0",
-    "vue-router": "^2.8.1"
+    "vue-router": "^2.8.1",
+    "vue-template-compiler": "^2.5.16"
   }
 }
