--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.3",
         "laravel-notification-channels/messagebird": "^1.0",
-        "laravel/dusk": "^2.0",
-        "laravel/framework": "5.5.*",
+        "laravel/dusk": "^3.0",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "sentry/sentry-laravel": "^0.8.0",
         "simplesoftwareio/simple-qrcode": "^1.5",
@@ -16,11 +16,11 @@
         "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^2.4",
+        "barryvdh/laravel-debugbar": "^3.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
@@ -43,12 +43,10 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
         ]
     },
     "config": {
