Update default domain in .env.dusk.local

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:qQR4jX2VdxnvanlazAPMXCcPL7SEQJx9jsCq0hRrGio=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://wildcard-participa.dev
+APP_URL=http://wildcard-participa.test
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
