--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
   - php artisan key:generate
   - php artisan migrate
-  - nvm install
+  - nvm install stable
   - npm install npm@latest -g
   - npm install
 
