--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "cross-env": "^3.2.3",
-    "laravel-mix": "0.*",
+    "cross-env": "^5.1.4",
+    "laravel-mix": "2.*",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "vue": "^2.5.16"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^1.5.1",
-    "bulma": "^0.4.4",
+    "bootstrap-vue": "^2.0.0-rc.9",
+    "bulma": "^0.7.1",
     "format-number": "^3.0.0",
     "hoek": "^5.0.3",
     "jquery": "^3.3.1",
@@ -31,7 +31,7 @@
     "raven-js": "^3.24.2",
     "vue-focus": "^2.1.0",
     "vue-i18n": "^7.6.0",
-    "vue-router": "^2.8.1",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16"
   }
 }
