--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.17"
+  },
+  "optionalDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.2.0"
   }
 }
