--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,7 +1,7 @@
 APP_NAME="Wildcard Participa"
 APP_ENV=local
 APP_KEY=base64:qQR4jX2VdxnvanlazAPMXCcPL7SEQJx9jsCq0hRrGio=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://wildcard-participa.test
 
